--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandro Sempere</title>
+
+    <link rel="stylesheet" href="static/bootstrap.css">
+
+    <link data-trunk rel="copy-dir" href="static">
 </head>
 <body>
-    
+
 </body>
 </html>
